--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start"
+    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "device-android": "C:\\android-sdk\\tools\\emulator -avd Pixel_API_25"
+  },
+  "dependencies": {
+    "react-native-maps": "^0.15.2"
   }
 }
